Cleaning up java docs, preparing for Open source